// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[` 1`] = `
<button
  className="button"
  disabled={false}
  type="submit"
>
  Test
</button>
`;

exports[` 2`] = `
<button
  className="button"
  disabled={false}
  type="reset"
>
  Test
</button>
`;

exports[`Button should render button properly 1`] = `
<button
  className="button"
  disabled={false}
  type="button"
>
  Test
</button>
`;

exports[`Button with disabled prop as true should render button with disabled as true 1`] = `
<button
  className="button"
  disabled={true}
  type="button"
>
  Test
</button>
`;

exports[`Button with disabled prop should render button with disabled as true 1`] = `
<button
  className="button"
  disabled={true}
  type="button"
>
  Test
</button>
`;

exports[`Button with modifier block should render button properly 1`] = `
<button
  className="button button--block"
  disabled={false}
  type="button"
>
  Test
</button>
`;

exports[`Button with modifier compose by primary and large and block should render button properly 1`] = `
<button
  className="button button--primary button--large button--block"
  disabled={false}
  type="button"
>
  Test
</button>
`;

exports[`Button with modifier large should render button properly 1`] = `
<button
  className="button button--large"
  disabled={false}
  type="button"
>
  Test
</button>
`;

exports[`Button with modifier medium should render button properly 1`] = `
<button
  className="button button--medium"
  disabled={false}
  type="button"
>
  Test
</button>
`;

exports[`Button with modifier primary should render button properly 1`] = `
<button
  className="button button--primary"
  disabled={false}
  type="button"
>
  Test
</button>
`;

exports[`Button with modifier secondary should render button properly 1`] = `
<button
  className="button button--secondary"
  disabled={false}
  type="button"
>
  Test
</button>
`;

exports[`Button with modifier tertiary should render button properly 1`] = `
<button
  className="button button--tertiary"
  disabled={false}
  type="button"
>
  Test
</button>
`;
